# ansible-lint-regression

./: ansible.cfg  ansible.mk  pyproject.toml
.ansible/: .gitignore  requirements.yaml
.github/workflows/: ansible-lint.yml
playbooks/: pxe.yaml
