[tool.poetry]
name = "ansible-lint-regresion"
version = "0.0.0"
description = "Ansible Lint Regression Test"
authors = ["Remerge GmbH <sre@remerge.io>"]

[tool.poetry.dependencies]
python = "^3.9"
ansible-core = "^2.14.2"
ansible-pylibssh = "^1.1.0"
ara = {extras = ["server"], version = "^1.6.1"}
dnspython = "^2.3.0"
google-auth = "^2.16.0"
google-cloud-core = "^2.3.2"
google-cloud-secret-manager = "^2.15.1"
ncclient = "^0.6.13"
netaddr = "^0.8.0"
omsdk = "^1.2.503"
passlib = "^1.7.4"
pynetbox = "^7.0.1"
python-consul = "^1.1.0"
python-nomad = "^1.5.0"
pytz = "^2022.7.1"
requests = "^2.28.2"
xmltodict = "^0.13.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
flake8-bugbear = "^23.1.20"
pylint = "^2.15.10"
tox = "^4.4.3"
molecule = {extras = ["docker"], version = "^4.0.4"}
ansible-lint = { version = "6.12.0", markers = "platform_system != 'Windows'" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
